--- a/app/templates/results.html
+++ b/app/templates/results.html
@@ -38,10 +38,10 @@ https://getbootstrap.com/docs/4.4/examples/cover/ -->
                <div class="collapse navbar-collapse flex-grow-0" id="navbarSupportedContent">
                   <ul class="navbar-nav text-right">
                      <li class="nav-item">
-                           <a class="nav-link" href="#">Right Link 1</a>
+                           <a class="nav-link" href="/">Home</a>
                      </li>
                      <li class="nav-item">
-                           <a class="nav-link" href="#">Right Link 2</a>
+                           <a class="nav-link" href="/how-it-works">How It Works</a>
                      </li>
                   </ul>
                </div>
