--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -80,18 +80,18 @@ https://getbootstrap.com/docs/4.4/examples/cover/ -->
                <p id="price-line" class="lead justify-content-between text-nowrap" style="display: flex;">
                   <span>It costs between </span>
                   <label class="sr-only" for="minprice-input">minimum price</label>
-                  <input id="minprice-input" type="text" name="minprice" class="form-control mb-2 mr-3" placeholder="any price">
+                  <input id="minprice-input" type="text" name="minprice" class="form-control mb-2 mr-3" placeholder="any price" autocomplete="off">
                   <span> and</span>
                   <label class="sr-only" for="maxprice-input">maximum price</label>
-                  <input id="maxprice-input" type="text" name="maxprice" class="form-control mb-2" placeholder="any price">
+                  <input id="maxprice-input" type="text" name="maxprice" class="form-control mb-2" placeholder="any price" autocomplete="off">
                </p>
                <p id="abv-line" class="lead justify-content-between text-nowrap" style="display: flex;">
                   <span>Its <span class="tooltip-underline" data-toggle="tooltip" data-placement="bottom" title="Alcohol by volume, or ABV, measures the percentage of alcohol contained in an alcoholic beverage">ABV</span> is between</span>
                   <label class="sr-only" for="minabv-input">minimum abv</label>
-                  <input id="minabv-input" type="text" name="minabv" class="form-control mb-2 mr-3" placeholder="any ABV">
+                  <input id="minabv-input" type="text" name="minabv" class="form-control mb-2 mr-3" placeholder="any ABV" autocomplete="off">
                   <span> and</span>
-                  <label class="sr-only" for="maxprice-input">maximum price</label>
-                  <input id="maxabv-input" type="text" name="maxabv" class="form-control mb-2" placeholder="any ABV">
+                  <label class="sr-only" for="maxprice-input">maximum abv</label>
+                  <input id="maxabv-input" type="text" name="maxabv" class="form-control mb-2" placeholder="any ABV" autocomplete="off">
                </p>
                <p class="lead mt-5 mx-auto">
                   <button type="submit" class="btn btn-lg btn-secondary">pick my poison</button>
