--- a/app/templates/results.html
+++ b/app/templates/results.html
@@ -153,7 +153,7 @@ https://getbootstrap.com/docs/4.4/examples/cover/ -->
                   }
 
                   if (results.length == 0) {
-                     $('#no-results').append('<p>no matches :(</p>');
+                     $('#no-results').append('<p>no matches &nbsp; :(</p>');
                   }
                   
                   for (let i = 0; i < results.length; i++) {
