--- a/app/templates/explanation.html
+++ b/app/templates/explanation.html
@@ -52,7 +52,7 @@ https://getbootstrap.com/docs/4.4/examples/cover/ -->
          </header>
 
          <main role="main" class="inner cover">
-            <p class="lead text-center">Our Process</p><hr class="fancy mt-4 mb-5" />
+            <p class="lead text-center">our process</p><hr class="fancy mt-4 mb-5" />
             <!-- <p>
                 The world of alcohol is a daunting one, without a doubt. With so many 
                 types, flavors, and price points to choose from, it's nearly an impossible 
@@ -127,12 +127,6 @@ https://getbootstrap.com/docs/4.4/examples/cover/ -->
          fillAnimation.onanimationend = () => {
             body.style.height = '100%';
             body.style.overflow = 'visible';
-
-            footer.style.position = 'absolute';
-            footer.style.bottom = '0';
-            footer.style.left = '0';
-            footer.style.right = '0';
-            main.style.marginBottom = '1.5rem';
          };
       </script>
       
