--- a/app/templates/results.html
+++ b/app/templates/results.html
@@ -189,7 +189,7 @@ https://getbootstrap.com/docs/4.4/examples/cover/ -->
                      var content = $('<div id="collapse' + card_index + '" class="collapse" aria-labelledby="heading' + card_index + '"></div>');
                      var info_body = $('<div class="card-body text-dark no-reviews"></div>');
                      info_body.append($('<h4>About this ' + results[i].drink.type + '</h4>'));
-                     if (results[i].drink.description != null) {
+                     if (results[i].drink.description != null && /\S/.test(results[i].drink.description)) {
                         info_body.append($('<p>' + results[i].drink.description + '</p>'));
                      }
                      if (results[i].drink.rating != null) {
