no results message

--- a/app/templates/results.html
+++ b/app/templates/results.html
@@ -155,7 +155,7 @@ https://getbootstrap.com/docs/4.4/examples/cover/ -->
                   } else {
                      var all_results = $('<p id="all-results-text"></p>');
                      if (results.length == 0) {
-                        all_results.text('no matches found :(');
+                        all_results.text('no matches found\xa0 :(');
                      } else {
                         $('#prefooter').append($('<hr id="all-results-divider" class="fancy mt-5 mb-4" />'));
                         all_results.text('all results loaded');
