--- a/app/templates/results.html
+++ b/app/templates/results.html
@@ -1,285 +1,29 @@
-<!-- Code references:
-https://stackoverflow.com/questions/29738787/filling-water-animation/29740828#29740828
-https://www.mkronenfeld.de/filling-liquid-animation/
-https://stackoverflow.com/questions/24210132/remove-border-radius-from-select-tag-in-bootstrap-3/24766039
-https://getbootstrap.com/docs/4.4/examples/cover/ -->
-
-<!doctype html>
-<html lang="en">
-   <head>
-      <meta charset="utf-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-      <title>pick your poison</title>
-      <link rel="stylesheet" href="/static/bootstrap.min.css">
-      <link rel="stylesheet" href="/static/style.css">
-      <script src="https://kit.fontawesome.com/3798c5de2c.js" crossorigin="anonymous"></script>  
-   </head>
-   <body>
-
-      <!-- Wave Graphic -->
-      <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" style="display: none;">
-         <symbol id="wave">
-            <path class="waveShape" d="M300 300V2.5s-.6-.1-1.1-.1c0 0-25.5-2.3-40.5-2.4-15 0-40.6 2.4-40.6 2.4-12.3 1.1-30.3 1.8-31.9 1.9-2-.1-19.7-.8-32-1.9 0 0-25.8-2.3-40.8-2.4-15 0-40.8 2.4-40.8 2.4-12.3 1.1-30.4 1.8-32 1.9-2-.1-20-.8-32.2-1.9 0 0-3.1-.3-8.1-.7V300h300z"/>
-         </symbol>
-      </svg>
-      <div class="liquid">
-         <svg viewBox="0 0 300 20" class="liquid__wave">
-            <use xlink:href="#wave"></use>
-         </svg>
-      </div>
-
-      <div class="cover-container d-flex w-100 h-100 mx-auto flex-column">
-
-         <header class="masthead text-center">
-            <nav class="navbar navbar-dark justify-content-end">
-               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
-                  <span class="navbar-toggler-icon"></span>
-               </button>
-               <div class="collapse navbar-collapse flex-grow-0" id="navbarSupportedContent">
-                  <ul class="navbar-nav text-right">
-                     <li class="nav-item">
-                           <a class="nav-link" href="/">Home</a>
-                     </li>
-                     <li class="nav-item">
-                           <a class="nav-link" href="/how-it-works">How It Works</a>
-                     </li>
-                  </ul>
-               </div>
-            </nav>
-            <div class="inner">
-               <h3 class="masthead-brand"><a href="/">pick your poison</a></h3>
-            </div>
-         </header>
-
-         <main role="main" class="inner cover">
-            <p class="lead text-center">here's what we've picked for you</p><hr class="fancy mt-4 mb-5" />
-            <div class="text-left text-dark results-list"></div>
-            <div id="prefooter" class="text-center mt-5">
-               <div id="loading-animation" class="sk-fading-circle" style="display: none;">
-                  <div class="sk-circle1 sk-circle"></div>
-                  <div class="sk-circle2 sk-circle"></div>
-                  <div class="sk-circle3 sk-circle"></div>
-                  <div class="sk-circle4 sk-circle"></div>
-                  <div class="sk-circle5 sk-circle"></div>
-                  <div class="sk-circle6 sk-circle"></div>
-                  <div class="sk-circle7 sk-circle"></div>
-                  <div class="sk-circle8 sk-circle"></div>
-                  <div class="sk-circle9 sk-circle"></div>
-                  <div class="sk-circle10 sk-circle"></div>
-                  <div class="sk-circle11 sk-circle"></div>
-                  <div class="sk-circle12 sk-circle"></div>
-                </div>
-               <a id="more-results" class="btn btn-lg btn-secondary" href="" style="display: none;">more results</a>
-            </div>
-         </main>
-
-         <footer class="mastfoot text-center">
-            <div class="inner">
-               <p>created by Derek Cheng, Collin Montag, DB Lee, Dana Luong, and Ishneet Sachar</p>
-            </div>
-         </footer>
-
-      </div>
-
-      <!-- Bootstrap JS -->
-      <script src="https://code.jquery.com/jquery-3.4.1.min.js" crossorigin="anonymous"></script>
-      <script src="//code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
-      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-
-      <script>
-         var urlParams = new URLSearchParams(window.location.search);
-         page = parseInt(urlParams.get('page'))
-         drink = urlParams.get('drink')
-         type = urlParams.get('type')
-         base = urlParams.get('base')
-         descriptors = urlParams.get('descriptors')
-         minprice = urlParams.get('minprice')
-         maxprice = urlParams.get('maxprice')
-         minabv = urlParams.get('minabv')
-         maxabv = urlParams.get('maxabv')
-
-         const body = document.getElementsByTagName('body')[0];
-         const footer = document.getElementsByClassName('mastfoot')[0];
-         const main = document.getElementsByTagName('main')[0];
-         body.style.height = '100vh';
-         body.style.overflow = 'hidden';
-         
-         const fillAnimation = document.querySelector('.liquid');
-         fillAnimation.onanimationend = () => {
-            body.style.height = '100%';
-            body.style.overflow = 'visible';
-
-            footer.style.position = 'absolute';
-            footer.style.bottom = '0';
-            footer.style.left = '0';
-            footer.style.right = '0';
-            main.style.marginBottom = '1.5rem';
-
-            // position footer correctly if results are cached and page instaloads
-            if (body.clientHeight != document.documentElement.clientHeight) {
-               footer.removeAttribute('style');
-               main.removeAttribute('style');
-            }
-         };
-
-         function loadMore() {
-            // add loading animation in place of button while results loading
-            $('#more-results').css('display', 'none');
-            $('#loading-animation').css('display', 'inline-block');
-
-            $.getJSON(
-               '/search', {
-                  more: 'true',
-                  page: page + 1,
-                  drink: drink,
-                  type: type,
-                  base: base,
-                  descriptors: descriptors,
-                  minprice: minprice,
-                  maxprice: maxprice,
-                  minabv: minabv,
-                  maxabv: maxabv
-               }, function(data) {
-                  var results = data.results;
-                  page = data.page_number;
-                  count = data.count;
-                  drink = data.drink_name;
-
-                  $('.card').removeClass('last');
-
-                  // remove loading animation and display more results button if appropriate
-                  $('#loading-animation').css('display', 'none');
-                  if (count - ((page - 1) * 10 + results.length) > 1) {
-                     $('#more-results').css('display', 'inline-block');
-                  } else {
-                     var all_results = $('<p id="all-results-text"></p>');
-                     if (results.length == 0) {
-                        all_results.text('no matches found\xa0 :(');
-                     } else {
-                        $('#prefooter').append($('<hr id="all-results-divider" class="fancy mt-5 mb-4" />'));
-                        all_results.text('all results loaded');
-                     }
-                     $('#prefooter').append(all_results);                        
-                  }
-                  
-                  for (let i = 0; i < results.length; i++) {
-                     var card_index = ((page - 1) * 10 + i + 1).toString();
-
-                     var card = i == results.length - 1 ? $('<div class="card last"></div>') : $('<div class="card"></div>');
-
-                     var header = $('<div class="card-header d-flex" id="heading ' + card_index + '"></div>');
-                     var icon = $('<i class="fas fa-fw align-middle"></i>');
-                     if (results[i].drink.type == 'beer') {
-                        icon.addClass('fa-beer');
-                     } else if (results[i].drink.type == 'wine') {
-                        icon.addClass('fa-wine-glass-alt');
-                     } else if (results[i].drink.type == 'liquor') {
-                        icon.addClass('fa-wine-bottle');
-                     } else if (results[i].drink.type == 'cocktail') {
-                        icon.addClass('fa-cocktail');
-                     }
-                     header.append(icon);
-                     var header_heading = $('<h2 class="mb-0 flex-grow-1"></h2>');
-                     var header_heading_button = $('<button class="btn btn-link text-left" type="button" data-toggle="collapse" data-target="#collapse' + card_index + '" aria-controls="collapse' + card_index + '"></button>');
-                     var heading_button_drink_name = $('<span class="drink-name"></span>');
-                     heading_button_drink_name.append('<strong>' + card_index + '.</strong> ' + results[i].drink.name);
-                     header_heading_button.append(heading_button_drink_name);
-                     if (results[i].dist != null) {
-                        header_heading_button.append('<span class="percentage-match text-right">' + results[i].dist + '% match</span>')
-                     }
-                     header_heading.append(header_heading_button);
-                     header.append(header_heading);
-                     card.append(header);
-
-                     var content = $('<div id="collapse' + card_index + '" class="collapse" aria-labelledby="heading' + card_index + '"></div>');
-                     var info_body = $('<div class="card-body text-dark no-reviews"></div>');
-                     info_body.append($('<h4>About this ' + results[i].drink.type + '</h4>'));
-                     if (results[i].drink.description != null && /\S/.test(results[i].drink.description)) {
-                        info_body.append($('<p>' + results[i].drink.description + '</p>'));
-                     }
-                     if (results[i].drink.rating != null) {
-                        var rating_split = results[i].drink.rating.split('/')
-                        var rating_num = rating_split[0].slice(0, 5)
-                        var rating_join = rating_num + '/' + rating_split[1]
-                        info_body.append($('<p><strong>Rating:</strong> ' + rating_join + '</p>'));
-                     }
-                     if (results[i].drink.abv != null) {
-                        info_body.append($('<p><strong>ABV:</strong> ' + results[i].drink.abv + '%</p>'));
-                     }
-                     if (results[i].drink.price != null) {
-                        info_body.append($('<p><strong>Price:</strong> $' + results[i].drink.price + '</p>'));
-                     }
-                     if (results[i].drink.origin != null && !isNaN(results[i].drink.origin)) {
-                        info_body.append($('<p><strong>Origin:</strong> ' + results[i].drink.origin + '</p>'));
-                     }
-                     info_body.append($('<a href="/search?page=0&drink=' + results[i].drink.name + '" class="btn btn-outline-primary mr-1">Find similar drinks</a>'));
-                     info_body.append('\n');
-                     var urlMsg = (results[i].drink.price != null) ? 'Order online' : 'Learn more'
-                     info_body.append($('<a href="' + results[i].drink.url + '" class="btn btn-outline-primary">' + urlMsg + '</a>'));
-
-                     // add reviews tab if there are reviews
-                     if (results[i].reviews.length != 0) {
-                        info_body.removeClass('no-reviews');
-                        var tab_content = $('<div class="tab-content"></div>');
-                        var info_pane = $('<div id="info-' + card_index + '" class="tab-pane active show"></div>');
-                        info_pane.append(info_body);
-                        tab_content.append(info_pane);
-
-                        var review_pane = $('<div id="reviews-' + card_index + '" class="tab-pane"></div>');
-                        var review_body = $('<div class="card-body text-dark reviews"></div>');
-                        review_body.append($('<h4>Reviews</h4>'));
-                        results[i].reviews.forEach(review => {
-                           if (review.body != null) {
-                              var review_quote = $('<blockquote class="blockquote"></blockquote>');
-                              review_quote.append($('<p class="mb-0">' + review.body + '</p>'));
-                              var review_footer = $('<footer class="blockquote-footer"></footer>');
-                              review_footer.append('Reviewed by <cite>' + review.author + '</cite>' + (review.date != null ? ' on ' + review.date : '') + ' (Rating: ' + review.rating + ')');
-                              review_quote.append(review_footer);
-                              review_body.append(review_quote);
-                           }
-                        });
-                        review_pane.append(review_body);
-                        tab_content.append(review_pane);
-
-                        var tabs_ul = $('<ul class="nav nav-tabs"></ul>');
-                        var info_li = $('<li class="nav-item"></li>');
-                        info_li.append($('<a class="nav-link active" data-toggle="tab" href="#info-' + card_index + '">Information</a>'));
-                        tabs_ul.append(info_li);
-                        var reviews_li = $('<li class="nav-item"></li>');
-                        reviews_li.append($('<a class="nav-link" data-toggle="tab" href="#reviews-' + card_index + '">Reviews</a>'));
-                        tabs_ul.append(reviews_li);
-                        
-                        content.append(tab_content);
-                        content.append(tabs_ul);
-                     } else {
-                        content.append(info_body);
-                     }
-                     card.append(content);
-
-                     $('.results-list').append(card);
-                     const element = results[i];
-                     
-                  }
-                  
-                  $("#result").text(data.result);
-
-                  // position the footer correctly
-                  if (body.clientHeight != document.documentElement.clientHeight) {
-                     footer.removeAttribute('style');
-                     main.removeAttribute('style');
-                  }
-               }
-            );
-            return false;
-         }
-
-         loadMore();
-
-         $(function() {
-            $('#more-results').bind('click', loadMore);
-         });
-      </script>
-      
-   </body>
-</html>
+{% extends "base.html" %}
+{% block main %}
+   <p class="lead text-center">here's what we've picked for you</p><hr class="fancy mt-4 mb-5" />
+   <div class="text-left text-dark results-list"></div>
+   <div id="prefooter" class="text-center mt-5">
+      <div id="loading-animation" class="sk-fading-circle" style="display: none;">
+         <div class="sk-circle1 sk-circle"></div>
+         <div class="sk-circle2 sk-circle"></div>
+         <div class="sk-circle3 sk-circle"></div>
+         <div class="sk-circle4 sk-circle"></div>
+         <div class="sk-circle5 sk-circle"></div>
+         <div class="sk-circle6 sk-circle"></div>
+         <div class="sk-circle7 sk-circle"></div>
+         <div class="sk-circle8 sk-circle"></div>
+         <div class="sk-circle9 sk-circle"></div>
+         <div class="sk-circle10 sk-circle"></div>
+         <div class="sk-circle11 sk-circle"></div>
+         <div class="sk-circle12 sk-circle"></div>
+         </div>
+      <a id="more-results" class="btn btn-lg btn-secondary" href="" style="display: none;">more results</a>
+   </div>
+{% endblock %}
+{% block bottomlinks %}
+   <script src="https://code.jquery.com/jquery-3.4.1.min.js" crossorigin="anonymous"></script>
+   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js" integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU=" crossorigin="anonymous"></script>
+   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
+   <script src="/static/js/results.js"></script>
+{% endblock %}
+{% block script %}{% endblock %}
