temporary fix for descriptors tooltip

--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -96,7 +96,7 @@
       var descriptors_clicked = false;
 
       $(function () {
-         $('#descriptors-input_tag').tooltip({'placement': 'right', 'trigger':'focus', 'title': 'Start typing and select any number of descriptors from the dropdown'});
+         $('#descriptors-input_tag').tooltip({'placement': 'top', 'trigger':'focus', 'title': 'Start typing and select any number of descriptors from the dropdown'});
          $('[data-toggle="tooltip"]').tooltip();
       })
 
