--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -69,9 +69,9 @@ a:hover {
 }
 
 /* Custom default button */
-.btn-secondary,
-.btn-secondary:hover,
-.btn-secondary:focus {
+.btn-secondary.custom,
+.btn-secondary.custom:hover,
+.btn-secondary.custom:focus {
   color: #333;
   text-shadow: none; /* Prevent inheritance from `body` */
   background-color: #fff;
@@ -111,7 +111,7 @@ body.search {
 /* Loading Text */
 p.loading-text {
    width: 100%;
-   position: absolute;
+   position: fixed;
    top: 50vh;
    font-size: 2em;
    visibility: hidden;
@@ -166,14 +166,22 @@ p.loading-text.loadout {
 .masthead nav {
    position: absolute;
    width: fit-content;
-   right: 2%;
+   right: 1.5em;
    text-shadow: none;
+   background-color: #663333;
 }
 
 @media (min-width: 48em) {
    .masthead-brand {
       float: center;
    }
+}
+
+.masthead .keywords-toggle-container {
+   position: absolute;
+   right: 2.5em;
+   margin-top: 3em;
+   z-index: -1;
 }
 
 /*
@@ -302,6 +310,10 @@ main .lead {
 .main-form input::placeholder,
 .main-form select {
    color: rgba(255, 255, 255, 0.5);
+}
+
+.main-form select option {
+   color: #000;
 }
 
 .main-form input:focus {
