--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -50,7 +50,7 @@
          <input id="maxabv-input" type="text" name="maxabv" class="form-control mb-2" placeholder="any ABV" autocomplete="off">
       </p>
       <p class="lead mt-5 mx-auto">
-         <button type="submit" class="btn btn-lg btn-secondary">pick my poison</button>
+         <button type="submit" class="btn btn-lg btn-secondary custom">pick my poison</button>
       </p>
    </form>
 {% endblock %}
