--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -50,7 +50,8 @@
          <input id="maxabv-input" type="text" name="maxabv" class="form-control mb-2" placeholder="any ABV" autocomplete="off">
       </p>
       <p class="lead mt-5 mx-auto">
-         <button type="submit" class="btn btn-lg btn-secondary custom">pick my poison</button>
+         <button type="submit" class="btn btn-lg btn-secondary custom mr-3">pick my poison</button>
+         <button id="lucky" class="btn btn-lg btn-secondary custom" data-toggle="tooltip" data-placement="right" title="Feeling adventurous? This will randomize the order of your search results!">i'm feeling lucky</button>
       </p>
    </form>
 {% endblock %}
@@ -149,6 +150,11 @@
          }).focus(function(){            
             $(this).data("uiAutocomplete").search($(this).val());
          });
+      });
+
+      $('#lucky').click(function(){
+         $('.main-form').append($('<input type="hidden" name="lucky" value="true" />'));
+         $('.main-form').submit();
       });
 
       $('form').submit(function(event) {
