--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -51,7 +51,7 @@
       </p>
       <p class="lead mt-5 mx-auto">
          <button type="submit" class="btn btn-lg btn-secondary custom mr-3">pick my poison</button>
-         <button id="lucky" class="btn btn-lg btn-secondary custom" data-toggle="tooltip" data-placement="right" title="Feeling adventurous? This will randomize the order of your search results!">i'm feeling lucky</button>
+         <button id="lucky" class="btn btn-lg btn-secondary custom" data-toggle="tooltip" data-placement="right" title="Feeling adventurous? This will randomize the order of your relevant search results!">i'm feeling lucky</button>
       </p>
    </form>
 {% endblock %}
