--- a/app/templates/search.html
+++ b/app/templates/search.html
@@ -42,7 +42,7 @@
          <input id="maxprice-input" type="text" name="maxprice" class="form-control mb-2" placeholder="any price" autocomplete="off">
       </p>
       <p id="abv-line" class="lead justify-content-between text-nowrap" style="display: flex;">
-         <span>Its <span class="tooltip-underline" data-toggle="tooltip" data-placement="bottom" title="Alcohol by volume, or ABV, measures the percentage of alcohol contained in an alcoholic beverage">ABV</span> is between</span>
+         <span>Its <span class="tooltip-underline" data-toggle="tooltip" data-placement="bottom" title="Alcohol by volume, or ABV, is the percent of a drink that is alcohol (ethanol)">ABV</span> is between</span>
          <label class="sr-only" for="minabv-input">minimum abv</label>
          <input id="minabv-input" type="text" name="minabv" class="form-control mb-2 mr-3" placeholder="any ABV" autocomplete="off">
          <span> and</span>
