--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -254,9 +254,11 @@ main .lead {
 @keyframes filltotop-action {
    0% {
       margin-top: 15vw;
+      height: 100%;
    }
    100% {
       margin-top: 10vw;
+      height: calc(100% + 5vw);
    }
 }
 
